--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Shaan Savarirayan <shaan.savarirayan@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 requests = "^2.26.0"
+aiohttp = "^3.7.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
