Add multiprocessing_io script

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pytest = "^5.2"
 [tool.poetry.scripts]
 async_io = "python_concurrency.async_io:main"
 hello = "python_concurrency.hello:main"
+multiprocessing_io = "python_concurrency.multiprocessing_io:main"
 sync_io = "python_concurrency.sync_io:main"
 threading_io = "python_concurrency.threading_io:main"
 
