Add sync_cpu script

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,10 @@ pytest = "^5.2"
 async_io = "python_concurrency.async_io:main"
 hello = "python_concurrency.hello:main"
 multiprocessing_io = "python_concurrency.multiprocessing_io:main"
+sync_cpu = "python_concurrency.sync_cpu:main"
 sync_io = "python_concurrency.sync_io:main"
 threading_io = "python_concurrency.threading_io:main"
+
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
